--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/multiplex-image-annotator"]
 	path = src/multiplex-image-annotator
 	url = https://github.com/SchapiroLabor/multiplexed-image-annotator.git
+[submodule "CellSighter_benchmark"]
+	path = CellSighter_benchmark
+	url = https://github.com/LukasHats/CellSighter_benchmark.git
